[project]
authors = [
    {name = "Siyovush", email = "shukurovsiyovush1@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Python package for train brain with different games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
